--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
 
     <color name="gray">#242B2E</color>
     <color name="light_gray">#758283</color>
+    <color name="orange">#FF9800</color>
 </resources>
