--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -4,13 +4,13 @@
     android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:elevation="8dp"
+    android:elevation="16dp"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray"
+        android:background="@color/white"
         android:padding="8dp">
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -19,7 +19,6 @@
             android:layout_height="120dp"
             android:layout_marginVertical="8dp"
             android:scaleType="centerInside"
-            android:src="@drawable/icon"
             app:layout_constraintBottom_toTopOf="@id/txtTitle"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,12 +28,12 @@
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
+            android:background="@color/orange"
+            android:fontFamily="@font/architects_daughter"
             android:gravity="center"
-            android:maxLines="1"
             android:padding="4dp"
             android:text="Good to Great"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
