--- a/app/src/main/res/drawable/ic_explore.xml
+++ b/app/src/main/res/drawable/ic_explore.xml
@@ -1,10 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="#000000"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="48"
+    android:viewportHeight="48">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M12,10.9c-0.61,0 -1.1,0.49 -1.1,1.1s0.49,1.1 1.1,1.1c0.61,0 1.1,-0.49 1.1,-1.1s-0.49,-1.1 -1.1,-1.1zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM14.19,14.19L6,18l3.81,-8.19L18,6l-3.81,8.19z" />
+        android:fillColor="#FF000000"
+        android:pathData="M24,6A18,18 0,1 1,6 24,18.1 18.1,0 0,1 24,6m0,-4A22,22 0,1 0,46 24,21.9 21.9,0 0,0 24,2Z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M33.3,13.3 L20,20 13.3,33.3a1.1,1.1 0,0 0,1.4 1.4L28,28l6.7,-13.3A1.1,1.1 0,0 0,33.3 13.3ZM24,26a2,2 0,1 1,2 -2A2,2 0,0 1,24 26Z" />
 </vector>
