--- a/app/src/main/res/layout/item_recommend_book.xml
+++ b/app/src/main/res/layout/item_recommend_book.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="150dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_width="250dp"
+    android:layout_height="350dp"
+    android:layout_margin="4dp"
     android:elevation="16dp"
     app:cardCornerRadius="8dp">
 
@@ -16,14 +16,31 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imgIcon"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="0dp"
             android:layout_marginVertical="8dp"
+            android:padding="16dp"
             android:scaleType="centerInside"
             android:src="@drawable/ic_book"
-            app:layout_constraintBottom_toTopOf="@id/txtTitle"
+            app:layout_constraintBottom_toTopOf="@id/txtAuthor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txtAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
+            android:fontFamily="@font/architects_daughter"
+            android:gravity="center"
+            android:text="Book Author"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/txtTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgIcon" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtTitle"
@@ -40,7 +57,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgIcon" />
+            app:layout_constraintTop_toBottomOf="@id/txtAuthor" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
