--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -9,7 +9,22 @@
         android:id="@+id/homeScreen"
         android:name="uz.gita.bookappwithfirebase.presentation.ui.screens.HomeScreen"
         android:label="HomeScreen"
-        tools:layout="@layout/screen_home"/>
+        tools:layout="@layout/screen_home">
+        <action
+            android:id="@+id/action_homeScreen_to_aboutBookScreen"
+            app:destination="@id/aboutBookScreen" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/aboutBookScreen"
+        android:name="uz.gita.bookappwithfirebase.presentation.ui.screens.AboutBookScreen"
+        android:label="AboutBookScreen"
+        tools:layout="@layout/screen_about_book">
+        <argument
+            android:name="bookData"
+            app:argType="uz.gita.bookappwithfirebase.data.common.BookData"
+            app:nullable="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/savedBooksScreen"
@@ -21,7 +36,7 @@
         android:id="@+id/exploreScreen"
         android:name="uz.gita.bookappwithfirebase.presentation.ui.screens.ExploreScreen"
         android:label="HomeScreen"
-        tools:layout="@layout/screen_explore" >
+        tools:layout="@layout/screen_explore">
         <action
             android:id="@+id/action_exploreScreen_to_bookReadScreen"
             app:destination="@id/bookReadScreen" />
