--- a/app/src/main/res/layout/screen_explore.xml
+++ b/app/src/main/res/layout/screen_explore.xml
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/architects_daughter"
-            android:text="Shiny book"
+            android:text="Explore books"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/btnNotification"
