--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -19,7 +19,7 @@
             android:layout_height="120dp"
             android:layout_marginVertical="8dp"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_book"
+            android:src="@drawable/icon_book"
             app:layout_constraintBottom_toTopOf="@id/txtTitle"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,7 +29,7 @@
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/orange"
+            android:background="@drawable/title_bg"
             android:fontFamily="@font/architects_daughter"
             android:gravity="center"
             android:padding="4dp"
