--- a/app/src/main/res/layout/item_recommend_book.xml
+++ b/app/src/main/res/layout/item_recommend_book.xml
@@ -35,7 +35,7 @@
             android:gravity="center"
             android:text="Book Author"
             android:textColor="@color/black"
-            android:textSize="22sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/txtTitle"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -46,13 +46,15 @@
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/orange"
+            android:background="@drawable/title_bg"
+            android:ellipsize="end"
             android:fontFamily="@font/architects_daughter"
             android:gravity="center"
+            android:maxLines="1"
             android:padding="4dp"
             android:text="Good to Great"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
