--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="orange">#FF9800</color>
 
     <color name="background">#CDCDCD</color>
+    <color name="dark_blue">#17637E</color>
+    <color name="blue">#1B7695</color>
 </resources>
