--- a/app/src/main/res/layout/item_saved_book.xml
+++ b/app/src/main/res/layout/item_saved_book.xml
@@ -40,8 +40,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/title_bg"
+            android:ellipsize="end"
             android:fontFamily="@font/architects_daughter"
             android:gravity="center"
+            android:maxLines="1"
             android:padding="4dp"
             android:text="Good to Great"
             android:textColor="@color/black"
