--- a/app/src/main/res/layout/screen_home.xml
+++ b/app/src/main/res/layout/screen_home.xml
@@ -103,11 +103,11 @@
                 android:gravity="center"
                 android:text="50%"
                 android:textColor="@color/white"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:textSize="40sp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
