--- a/app/src/main/res/layout/item_saved_book.xml
+++ b/app/src/main/res/layout/item_saved_book.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:maxLines="1"
                 android:padding="4dp"
                 android:text="Good to Great"
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:maxLines="1"
                 android:padding="4dp"
                 android:text="Author"
