--- a/app/src/main/res/layout/screen_about_book.xml
+++ b/app/src/main/res/layout/screen_about_book.xml
@@ -76,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:gravity="center"
                 android:text="Book name"
                 android:textColor="@color/black"
@@ -91,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:text="Book author: "
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -104,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:text="Pages: "
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -118,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:text="Year: "
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -131,7 +131,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:text="Book genre: "
                 android:textColor="@color/black"
                 android:textSize="20sp"
