--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/amarante"
             android:gravity="center"
             android:maxLines="1"
             android:padding="2dp"
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/amarante"
             android:gravity="center"
             android:maxLines="1"
             android:text="Author"
