--- a/app/src/main/res/layout/item_recommend_book.xml
+++ b/app/src/main/res/layout/item_recommend_book.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/amarante"
             android:gravity="center"
             android:text="Book Author"
             android:textColor="@color/black"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/title_bg"
             android:ellipsize="end"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/amarante"
             android:gravity="center"
             android:maxLines="1"
             android:padding="4dp"
