--- a/app/src/main/res/layout/screen_explore.xml
+++ b/app/src/main/res/layout/screen_explore.xml
@@ -29,7 +29,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/amarante"
             android:text="Explore books"
             android:textColor="@color/white"
             android:textSize="20sp"
