--- a/app/src/main/res/layout/screen_home.xml
+++ b/app/src/main/res/layout/screen_home.xml
@@ -29,7 +29,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/amarante"
             android:text="Home page"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -75,7 +75,7 @@
                 android:id="@+id/txt2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:gravity="center_vertical"
                 android:paddingStart="8dp"
                 android:text="You were reading..."
@@ -91,7 +91,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:paddingStart="8dp"
@@ -109,7 +109,7 @@
                 android:layout_height="50dp"
                 android:layout_margin="4dp"
                 android:background="@drawable/bg_percent"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/amarante"
                 android:gravity="center"
                 android:text="50%"
                 android:textColor="@color/white"
@@ -130,7 +130,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:fontFamily="@font/architects_daughter"
+        android:fontFamily="@font/amarante"
         android:text="Recommendation"
         android:textColor="@color/black"
         android:textSize="24sp"
