--- a/app/src/main/res/layout/screen_saved.xml
+++ b/app/src/main/res/layout/screen_saved.xml
@@ -19,7 +19,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/amarante"
             android:text="Saved books"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:fontFamily="@font/architects_daughter"
+        android:fontFamily="@font/amarante"
         android:gravity="center"
         android:text="No saved books"
         android:textColor="@color/black"
