--- a/app/src/main/res/layout/screen_splash.xml
+++ b/app/src/main/res/layout/screen_splash.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="16dp"
-        android:fontFamily="@font/architects_daughter"
+        android:fontFamily="@font/amarante"
         android:gravity="center"
         android:text="Shiny book"
         android:textColor="@color/black"
