--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,7 @@
     <color name="light_gray">#758283</color>
     <color name="orange">#FF9800</color>
 
-    <!-- #CDCDCD -->
-    <color name="background">#FFFFFF</color>
+    <color name="background">#EEEEEE</color>
     <color name="dark_blue">#17637E</color>
     <color name="blue">#1B7695</color>
 </resources>
