--- a/app/src/main/res/layout/screen_saved.xml
+++ b/app/src/main/res/layout/screen_saved.xml
@@ -118,14 +118,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginVertical="8dp"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view"
-        app:layout_constraintVertical_weight="1"
-        tools:listitem="@layout/screen_saved" />
+        app:layout_constraintVertical_weight="1"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgNoBooks"
