--- a/app/src/main/res/layout/screen_saved.xml
+++ b/app/src/main/res/layout/screen_saved.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
@@ -42,8 +41,9 @@
             android:id="@+id/btnLastBook"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            android:background="@color/blue"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginVertical="18dp"
+            android:background="@drawable/current_book_bg"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,8 @@
                 android:id="@+id/icon"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:background="@color/dark_blue"
+                android:background="@drawable/current_book_bg"
+                android:backgroundTint="@color/dark_blue"
                 android:padding="12dp"
                 android:src="@drawable/ic_lastbook"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -96,7 +97,7 @@
                 android:id="@+id/percentageView"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="4dp"
+                android:layout_margin="8dp"
                 android:background="@drawable/bg_percent"
                 android:fontFamily="@font/amarante"
                 android:gravity="center"
@@ -113,6 +114,16 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
@@ -122,7 +133,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view"
-        app:layout_constraintVertical_weight="1"/>
+        app:layout_constraintVertical_weight="1" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgNoBooks"
