--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -24,10 +24,10 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtTitle"
+            style="@style/MyTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/amarante"
             android:gravity="center"
             android:maxLines="1"
             android:padding="2dp"
@@ -38,10 +38,10 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtAuthor"
+            style="@style/MyTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/amarante"
             android:gravity="center"
             android:maxLines="1"
             android:text="Author"
