--- a/app/src/main/res/layout/item_saved_book.xml
+++ b/app/src/main/res/layout/item_saved_book.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="4dp"
     android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="4dp"
     android:elevation="8dp"
     app:cardCornerRadius="8dp">
 
@@ -32,10 +32,10 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txtTitle"
+                style="@style/MyTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:fontFamily="@font/amarante"
                 android:maxLines="1"
                 android:padding="4dp"
                 android:text="Good to Great"
@@ -45,10 +45,10 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txtAuthor"
+                style="@style/MyTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:fontFamily="@font/amarante"
                 android:maxLines="1"
                 android:padding="4dp"
                 android:text="Author"
