--- a/app/src/main/res/layout/screen_saved.xml
+++ b/app/src/main/res/layout/screen_saved.xml
@@ -16,9 +16,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
+            style="@style/MyTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/amarante"
             android:text="Saved books"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -63,9 +63,9 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txt2"
+                style="@style/MyTextStyle"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:fontFamily="@font/amarante"
                 android:gravity="center_vertical"
                 android:paddingStart="8dp"
                 android:text="You were reading..."
@@ -78,10 +78,10 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txtBookName"
+                style="@style/MyTextStyle"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/amarante"
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:paddingStart="8dp"
@@ -95,11 +95,11 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/percentageView"
+                style="@style/MyTextStyle"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="8dp"
                 android:background="@drawable/bg_percent"
-                android:fontFamily="@font/amarante"
                 android:gravity="center"
                 android:text="50%"
                 android:textColor="@color/white"
@@ -137,10 +137,10 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txtNoBookTitle"
+        style="@style/MyTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:fontFamily="@font/amarante"
         android:gravity="center"
         android:text="No saved books"
         android:textColor="@color/black"
