--- a/app/src/main/res/layout/screen_splash.xml
+++ b/app/src/main/res/layout/screen_splash.xml
@@ -16,10 +16,10 @@
         app:layout_constraintVertical_bias="0.4" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        style="@style/MyTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="16dp"
-        android:fontFamily="@font/amarante"
         android:gravity="center"
         android:text="Shiny book"
         android:textColor="@color/black"
