--- a/app/src/main/res/layout/vertical_item.xml
+++ b/app/src/main/res/layout/vertical_item.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="16dp"
     android:layout_marginVertical="8dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingStart="16dp">
 
     <TextView
         android:id="@+id/category"
+        style="@style/MyTextStyle"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:fontFamily="@font/amarante"
         android:gravity="center_vertical"
         android:text="SubCategory #1"
         android:textColor="@android:color/black"
