--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.BookAppWithFirebase" parent="Base.Theme.BookAppWithFirebase" />
+
+    <style name="MyTextStyle" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">@font/caladea</item>
+    </style>
 </resources>
